# BareMetalBBB

./: CMakeLists.txt  README.md
led_on/: CMakeLists.txt  Makefile  README.md  main.c  postprocess.sh  ram.ld  startup.lst  startup.s
utilities/: create_image_header.py
